[package]
name = "fly-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unofficial Fly.io SDK for Rust"
repository = "https://github.com/alexlatif/fly-rs"
keywords = ["sdk", "cloud", "serverless", "gpu"]
categories = ["web-programming", "virtualization"]
documentation = "https://docs.rs/fly-sdk"

[features]
default = ["full"]
apps = []
machines = []
volumes = []
secrets = []
full = ["apps", "machines", "volumes", "secrets"]

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
